5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4487/executions/1577_1331.log
== TEST (2019-04-09 19:01:11) 
-- CODE:
print(//50/3%)
-- ERROR:
File "XXXX", line 1
    print(//50/3%)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 19:01:47) 
-- CODE:
print(50//3%1)
-- ERROR:
File "XXXX", line 1
    print(//50/3%)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 19:01:51) 
-- CODE:
print(50//3%1)
-- EXECUTION TIME:
0.16082
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 19:02:17) 
-- CODE:
print(50/4)
-- OUTPUT:
12.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 19:02:24) 
-- CODE:
print(50/4)
-- EXECUTION TIME:
0.264687
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
12.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 19:02:37) 
-- CODE:
print(50/4%)
-- ERROR:
File "XXXX", line 1
    print(50/4%)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 19:04:52) 
-- CODE:
print(50/3)
print(50%3)
-- OUTPUT:
16.666666666666668
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 19:04:55) 
-- CODE:
print(50/3)
print(50%3)
-- EXECUTION TIME:
0.138689
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16.666666666666668
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 19:05:29) 
-- CODE:
print(50//3)
print(50%3)
-- OUTPUT:
16
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 19:05:31) 
-- CODE:
print(50//3)
print(50%3)
-- EXECUTION TIME:
0.294363
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
